HLMS-002 - add get all applications by userid (using projection), update docs, move/rename dtos
